@startuml Voodie Class Diagram

class Foodie {

    -name: string
    -bio: string
    -recipes: [Recipe]
    -favoritedRecipes: [Recipe]
    -followers: Array
    -following: Array

    constructor(name: string)
    rateRecipe(recipe: Recipe, rating, review)
    favorite(recipe: Recipe)
    unfavorite(recipe: Recipe)
    createRecipe(recipe: Recipe)
    deleteRecipe(recipe: Recipe)
    follow(foodie: Foodie)
    unfollow(foodie: Foodie)
    getProfile();
}

class Recipe {
    -name: string
    -ingredients: Array
    -instructions: Array
    -cookTime: number
    -serves: number
    -totalRatings: number
    -reviews: Array
    -starRatings: Array
    -recipeRating: number
    -favorites: number

    constructor(name: string, ingredients: Array, instructions: Array, cookTime: number, serves: number)
    getRating();
    printRecipe();
    getAllReviews();
}

Foodie "1" o----> "0..*" Recipe : creates/deletes, rates, un/favorites, edits, prints

Recipe ----> "0..*" Foodie : un/favorited by, printed by, edited by, rated by, created/deleted by,



@enduml